# research-agent-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
datasets/: DATASETS.md
datasets/benchmark_tasks/: tasks.json
prompts/: code_prompt.txt  evaluator_prompt.txt  feedback_prompt.txt  planner_prompt.txt  report_prompt.txt
research_artifacts/case_studies/highest_dqs_improvement/: comparison_report_task_029.md  decision_breakdown_task_029.csv
research_artifacts/case_studies/highest_fis_improvement/: comparison_metrics_task_029.csv
research_artifacts/case_studies/highest_ors_improvement/: comparison_metrics_task_036.csv  comparison_report_task_036.md  decision_breakdown_task_036.csv
research_artifacts/case_studies/largest_degradation/: comparison_metrics_task_030.csv  comparison_report_task_030.md  decision_breakdown_task_030.csv
research_artifacts/statistics/: benchmark_statistics.csv  overall_decision_breakdown.csv
research_artifacts/summaries/: benchmark_summary.md  overall_metrics.csv  statistical_analysis.md  task_leaderboard.csv
scripts/: download_datasets.py  generate_datasets.py
src/research_agent/: __init__.py  crew.py  main.py
src/research_agent/api/: routes.py
src/research_agent/evaluation/: benchmark_runner.py  comparison_metrics.py  decision_critic.py  qualitative_evaluator.py  reliability_metrics.py  result_summarizer.py  scoring.py  task_qualification.py
src/research_agent/flows/: feedback_flow.py  reliability_flow.py
src/research_agent/models/: result_schema.py  (+1 more)
tests/: test_agents.py  test_evaluation.py  test_tools.py
(+19 files in other folders)
